--- a/frontend/src/styles/Services.css
+++ b/frontend/src/styles/Services.css
@@ -1,7 +1,7 @@
 /* Services.css */
 
 .services {
-    background-color: #f0f0f0; /* Gris claro */
+    background-color: aliceblue; /* Gris claro */
     text-align: center;
   }
   
@@ -12,11 +12,38 @@
   
   .services p {
     font-size: 1.1em;
-    max-width: 800px;
+    max-width: 100%;
     margin: 0 auto;
+    padding: 15px;
+    text-align: justify;
   }
   
   img {
-    height: 30em;
-    width: 30em;
+    height: 20em;
+    width: 20em;
+  }
+
+  .contenedor-tarjetas
+  {
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    gap: 10px;
+    background-color: aliceblue;
+    width: 100%;
+    align-content: center;
+
+  }
+
+  .card
+  {
+      width: 1fr;
+  }
+
+  .azul
+  {
+    border:5px solid blue;
+    background-repeat: none;
+    background-size: cover;
+    border-radius: 5%;
+
   }
